--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -362,6 +362,7 @@ footer {
   max-height: 1080px;
   background: url(../images/lead-bg.jpg);
   background-size: cover;
+  background-position: center;
   padding: 15px;
   overflow: hidden;
 }
