--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -94,7 +94,7 @@ $text: #74808a;
 */
 
 body {
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   font-size: 16px;
 
   &.active {
@@ -334,7 +334,7 @@ footer {
 
   &:after {
     position: absolute;
-    content: '';
+    content: "";
     top: 100%;
     height: 1px;
     width: 50px;
@@ -490,11 +490,11 @@ footer {
 #experience-timeline {
   margin: 30px auto 0 auto;
   position: relative;
-  max-width: 1000px;
+  max-width: 1200px;
 
   &:before {
     position: absolute;
-    content: '';
+    content: "";
     top: 0;
     bottom: 0;
     left: 303px;
@@ -507,7 +507,7 @@ footer {
 
   &:after {
     position: absolute;
-    content: '';
+    content: "";
     width: 3px;
     height: 40px;
     background: $base-color;
@@ -600,7 +600,7 @@ footer {
 }
 
 .education-block {
-  max-width: 700px;
+  max-width: 900px;
   margin: 0 auto 30px auto;
   padding: 15px;
   border: 1px solid $border;
@@ -1031,4 +1031,23 @@ footer {
       padding: 5px 10px;
     }
   }
+}
+
+/* custom scrollbar */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #d6dee1;
+  border-radius: 20px;
+  border: 6px solid transparent;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #a8bbbf;
 }
